[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/DamageBox.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="DamageZone" type="Node2D"]
script = ExtResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 1 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
